Fix for bug 52827. Getting the parent window and passing it to the alert and confirm dialogs.  r=dveditz, law a=law (I used the old appproval list).