xpinstall/src/nsSoftwareUpdate.cpp
@@ -309,6 +309,7 @@ NS_IMETHODIMP
 nsSoftwareUpdate::InstallJar(  nsIFile* aLocalFile,
                                const PRUnichar* aURL,
                                const PRUnichar* aArguments,
+                               nsIDOMWindowInternal* aParentWindow,
                                PRUint32 flags,
                                nsIXPIListener* aListener)
 {
@@ -327,7 +328,7 @@ nsSoftwareUpdate::InstallJar(  nsIFile* aLocalFile,
 
     // we want to call this with or without a chrome registry
     nsInstallInfo *info = new nsInstallInfo( 0, aLocalFile, aURL, aArguments,
-                                             flags, aListener, chromeReg );
+                                             flags, aListener, aParentWindow, chromeReg );
     
     if (!info)
         return NS_ERROR_OUT_OF_MEMORY;
@@ -363,6 +364,7 @@ nsSoftwareUpdate::InstallChrome( PRUint32 aType,
                                              aName,
                                              (PRUint32)aSelect,
                                              aListener,
+                                             nsnull, 
                                              chromeReg);
     if (!info)
         return NS_ERROR_OUT_OF_MEMORY;
